@@ -1,5 +1,6 @@
 2009-01-17 - Sean Huber (shuber@huberry.com)
   * Add shoulda_macros
+  * Update shoulda_macros
 
 2008-08-18 - Sean Huber (shuber@huberry.com)
 	* Added tests
